objects/Partner_Portal_Announcement__c.object
<CustomObject>
    <description>Announcements that show on various pages of the Partner Portal community.</description>
    <fields>
        <fullName>Announcement__c</fullName>
        <description>The body of the announcement that displays on the page.</description>
        <label>Announcement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description in partner portal slider</description>
        <inlineHelpText>Enter the Description of Announcement. If Read More link is required. Please add this piece of text and replace &apos;Description URL&apos; with actual URL link
&lt;a href=&quot;Description URL&quot; target=&quot;_blank&quot;&gt;Read More&lt;/a&gt;</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image URL location in http://xxxxxxxx/yyyy.jpeg format</description>
        <inlineHelpText>Image URL location in http://xxxxxxxx/yyyy.jpeg format</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Page__c</fullName>
        <description>The pages on which the announcement should appear.</description>
        <label>Portal Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Page</fullName>
                    <default>true</default>
                    <label>Home Page</label>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing Tools</fullName>
                </value>
                <value>
                    <fullName>Partner Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title in partner portal slider images</description>
        <inlineHelpText>Title in partner portal slider images</inlineHelpText>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to separate Portal Announcement Records for Image Slider or for other purposes</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Portal Announcement</label>
    <listViews>
        <fullName>BANNERS</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Image__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Banner</value>
        </filters>
        <label>BANNERS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>